--- a/src/style/index.css
+++ b/src/style/index.css
@@ -10,6 +10,7 @@ html, body {
 
 .outer-container {
   height: 100%;
+  padding: 0;
 }
 
 .login-title {
@@ -28,7 +29,7 @@ html, body {
 }
 
 .register-container {
-  max-width: 40%;
+  max-width: 400px;
   margin: 2em auto;
   color: white;
 }
