--- a/src/style/modal.css
+++ b/src/style/modal.css
@@ -20,7 +20,7 @@
 
 .users {
   margin-bottom: 0;
-  background-color: #f2f2f2;
+  background-color: #f0f0f0;
   color: #777777;
 }
 
@@ -41,5 +41,13 @@
   background-color: #149a33;
   border-radius: 50%;
   float: left;
-  margin: 16px 10px;
+  margin: 15px 20px;
+}
+
+.added {
+  float: right;
+  font-size: 11px;
+  margin-right: 10px;
+  color: #777;
+  margin-top: 4px;
 }
