--- a/src/style/sidebar.css
+++ b/src/style/sidebar.css
@@ -1,15 +1,13 @@
 .sidebar {
-  max-width: 420px;
-  min-width: 210px;
+  min-width: 250px;
   background-color: white;
   color: #333333;
-  padding-top: 10px;
   height: 100%;
 }
 
 .heading {
   font-size: 16px;
-  margin-bottom: 10px;
+  margin: 10px 0;
   position: relative;
 }
 
@@ -80,7 +78,7 @@
 .name {
   display: inline-block;
   margin-left: 1em;
-  color: #777777;
+  color: #444;
 }
 
 .last-message {
@@ -105,5 +103,5 @@
   margin: 0 auto;
   cursor: pointer;
   border-bottom: 1px solid #eeeeee;
-  color: #777777;
+  color: #444;
 }
