--- a/src/style/chatroom.css
+++ b/src/style/chatroom.css
@@ -26,12 +26,51 @@
 }
 
 .plus-icon {
-  position: absolute;
-  right: 20px;
-  top: 11px;
+  float: right;
+  margin-right: 10px;
   font-size: 20px;
   color: #149a33;
   cursor: pointer;
+}
+
+.settings-dropdown {
+  float: right;
+  position: relative;
+  cursor: pointer;
+  font-size: 20px;
+  color: #149a33;
+}
+
+.user-name {
+  float: left
+}
+
+.dropdown-list {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  z-index: 1000;
+  float: left;
+  min-width: 150px;
+  padding: 0;
+  color: #555;
+  font-size: 16px;
+  background-color: #fff;
+  list-style: none;
+  border: 1px solid #e5e5e5;
+  box-shadow: 0 5px 8px rgba(0,0,0,.175);
+}
+
+.dropdown-list > li {
+  display: block;
+  padding: 3px 16px;
+  clear: both;
+  line-height: 1.4;
+  white-space: nowrap;
+}
+
+.dropdown-list > li:hover {
+  background-color: #f2f2f2;
 }
 
 .thread-container {
