--- a/src/style/sidebar.css
+++ b/src/style/sidebar.css
@@ -1,3 +1,7 @@
+.hidden {
+  display: none;
+}
+
 .sidebar {
   min-width: 250px;
   background-color: white;
@@ -13,8 +17,8 @@
 
 .cog-icon {
   position: absolute;
-  bottom: 0;
-  left: 18px;
+  bottom: -2px;
+  left: 1em;
   font-size: 20px;
   color: #149a33;
   cursor: pointer;
