--- a/src/style/index.css
+++ b/src/style/index.css
@@ -29,7 +29,6 @@ html, body {
   }
 }
 
-
 .outer-container {
   display: flex;
   flex-direction: column;
@@ -58,7 +57,8 @@ html, body {
 
 .register-container {
   max-width: 400px;
-  margin: 2em auto;
+  margin: auto;
+  padding: 2em;
   color: white;
 }
 
