--- a/src/style/index.css
+++ b/src/style/index.css
@@ -6,10 +6,14 @@ html, body {
   width: 100%;
   background-color: #444444;
 }
-
+//1187
 @media screen and (max-width: 991px) {
   .chat-name {
     margin-left: 2em;
+  }
+
+  .sidebar-container {
+    max-width: 240px;
   }
 }
 
@@ -24,6 +28,10 @@ html, body {
 
   .chat-name {
     margin-left: 2em;
+  }
+
+  .sidebar-container {
+    max-width: 200px;
   }
 }
 
@@ -42,6 +50,10 @@ html, body {
 
   .plus-icon {
     margin-right: 5px;
+  }
+
+  .sidebar-container {
+    max-width: 160px;
   }
 }
 
