--- a/src/style/sidebar.css
+++ b/src/style/sidebar.css
@@ -42,34 +42,38 @@
 }
 
 .search {
-  padding: 10px 0;
+  padding: 8px 0;
   position: relative;
   border-top: 1px solid #e5e5e5;
 }
 
 .search-bar {
   width: 90%;
-  background-color: #f0f0f0;
+  background-color: #f1eaea;
   border-radius: 5px;
   border-style: none;
-  font-size: 14px;
-  height: 30px;
-  padding-left: 3%;
+  font-size: 16px;
+  padding: 5px 10px;
   color: #333;
 }
 
 .search-icon {
-  background-color: #f3f3f3;
-  color: #999999;
+  background-color: #f1eaea;
+  color: #777;
   position: absolute;
   right: 8%;
-  top: 12px;
+  top: 33%;
+}
+
+.search-icon > svg {
+  display: block;
+  margin: auto;
 }
 
 .list-heading {
   margin-bottom: 0;
   background-color: #e5e5e5;
-  color: #777;
+  color: #666;
 }
 
 .chat-list {
@@ -85,6 +89,8 @@
   margin: 0 auto;
   cursor: pointer;
   border-bottom: 1px solid #e5e5e5;
+  border: none;
+  width: 100%;
 }
 
 .active {
